// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductSlider should render nothing 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductSlider)
    products={Array []}
  >
    <ProductSlider
      dispatch={[Function]}
      isCartPage={false}
      isProductPage={false}
      products={Array []}
      showMore={false}
      showMoreUrl={null}
    />
  </Connect(ProductSlider)>
</Provider>
`;

exports[`ProductSlider should render slider 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductSlider)
    isCartPage={true}
    products={
      Array [
        Object {
          "featuredImageUrl": "https://example.com/1",
          "id": "1",
          "name": "1",
        },
        Object {
          "featuredImageUrl": "https://example.com/2",
          "id": "2",
          "name": "2",
        },
      ]
    }
    showMore={false}
  >
    <ProductSlider
      dispatch={[Function]}
      isCartPage={true}
      isProductPage={false}
      products={
        Array [
          Object {
            "featuredImageUrl": "https://example.com/1",
            "id": "1",
            "name": "1",
          },
          Object {
            "featuredImageUrl": "https://example.com/2",
            "id": "2",
            "name": "2",
          },
        ]
      }
      showMore={false}
      showMoreUrl="/page/recently-viewed"
    >
      <div
        className="css-1my1qng"
      >
        <div
          className={
            Object {
              "data-css-1clsrg5": "",
            }
          }
        >
          <h3
            className="css-14l6086"
          >
            <Translate
              className=""
              params={Object {}}
              string="recently_viewed_products.headline_cart"
            >
              <span
                className=""
              >
                recently_viewed_products.headline_cart
              </span>
            </Translate>
          </h3>
        </div>
        <_class
          classNames={
            Object {
              "container": "css-1xfu8wy",
            }
          }
          controls={false}
          indicators={false}
          loop={false}
          slidesPerView={2.3}
          snapItems={false}
        >
          <div>
            <Item
              className="css-j85wo1"
              key="s1"
            >
              <div>
                <Card
                  className="css-6r0d5j"
                >
                  <div
                    className="css-1czp7w7 css-6r0d5j"
                  >
                    <ProductCard
                      hideName={false}
                      hidePrice={true}
                      hideRating={true}
                      product={
                        Object {
                          "featuredImageUrl": "https://example.com/1",
                          "id": "1",
                          "name": "1",
                        }
                      }
                      titleRows={2}
                    >
                      <Connect(Link)
                        className="css-b4pchx"
                        href="/item/31"
                        itemProp="item"
                        itemScope={true}
                        itemType="http://schema.org/Product"
                        tagName="a"
                      >
                        <Link
                          className="css-b4pchx"
                          disabled={false}
                          historyPush={[Function]}
                          historyReplace={[Function]}
                          href="/item/31"
                          itemProp="item"
                          itemScope={true}
                          itemType="http://schema.org/Product"
                          replace={false}
                          state={Object {}}
                          tag="div"
                          tagName="a"
                        >
                          <div
                            className="css-c6ki83 css-b4pchx"
                            data-test-id="link: /item/31"
                            onClick={[Function]}
                            role="link"
                          >
                            <ProductImage
                              alt="1"
                              animating={true}
                              forcePlaceholder={false}
                              highestResolutionLoaded={[Function]}
                              itemProp="image"
                              ratio={null}
                              resolutions={
                                Array [
                                  Object {
                                    "blur": 2,
                                    "height": 50,
                                    "width": 50,
                                  },
                                  Object {
                                    "height": 440,
                                    "width": 440,
                                  },
                                ]
                              }
                              src="https://example.com/1"
                            >
                              <Image
                                alt="1"
                                animating={true}
                                backgroundColor="#f2f2f2"
                                className=""
                                forcePlaceholder={false}
                                highestResolutionLoaded={[Function]}
                                itemProp="image"
                                onError={[Function]}
                                onLoad={null}
                                ratio={null}
                                resolutions={
                                  Array [
                                    Object {
                                      "blur": 2,
                                      "height": 50,
                                      "width": 50,
                                    },
                                    Object {
                                      "height": 440,
                                      "width": 440,
                                    },
                                  ]
                                }
                                src="https://example.com/1"
                                srcmap={null}
                                transition={null}
                              >
                                <div
                                  className="css-326p2s "
                                />
                              </Image>
                            </ProductImage>
                            <div
                              className="css-1rbh2c4"
                            >
                              <div
                                className="css-by38mh"
                                itemProp="name"
                              >
                                <Ellipsis
                                  className=""
                                  ellipsis="..."
                                  rows={2}
                                >
                                  <Dotdotdot
                                    clamp={2}
                                    className=""
                                    ellipsis="..."
                                    tagName="div"
                                    truncationChar="…"
                                    useNativeClamp={true}
                                  >
                                    <div
                                      className=""
                                    >
                                      1
                                    </div>
                                  </Dotdotdot>
                                </Ellipsis>
                              </div>
                            </div>
                          </div>
                        </Link>
                      </Connect(Link)>
                    </ProductCard>
                  </div>
                </Card>
              </div>
            </Item>
            <Item
              className="css-j85wo1"
              key="s2"
            >
              <div>
                <Card
                  className="css-6r0d5j"
                >
                  <div
                    className="css-1czp7w7 css-6r0d5j"
                  >
                    <ProductCard
                      hideName={false}
                      hidePrice={true}
                      hideRating={true}
                      product={
                        Object {
                          "featuredImageUrl": "https://example.com/2",
                          "id": "2",
                          "name": "2",
                        }
                      }
                      titleRows={2}
                    >
                      <Connect(Link)
                        className="css-b4pchx"
                        href="/item/32"
                        itemProp="item"
                        itemScope={true}
                        itemType="http://schema.org/Product"
                        tagName="a"
                      >
                        <Link
                          className="css-b4pchx"
                          disabled={false}
                          historyPush={[Function]}
                          historyReplace={[Function]}
                          href="/item/32"
                          itemProp="item"
                          itemScope={true}
                          itemType="http://schema.org/Product"
                          replace={false}
                          state={Object {}}
                          tag="div"
                          tagName="a"
                        >
                          <div
                            className="css-c6ki83 css-b4pchx"
                            data-test-id="link: /item/32"
                            onClick={[Function]}
                            role="link"
                          >
                            <ProductImage
                              alt="2"
                              animating={true}
                              forcePlaceholder={false}
                              highestResolutionLoaded={[Function]}
                              itemProp="image"
                              ratio={null}
                              resolutions={
                                Array [
                                  Object {
                                    "blur": 2,
                                    "height": 50,
                                    "width": 50,
                                  },
                                  Object {
                                    "height": 440,
                                    "width": 440,
                                  },
                                ]
                              }
                              src="https://example.com/2"
                            >
                              <Image
                                alt="2"
                                animating={true}
                                backgroundColor="#f2f2f2"
                                className=""
                                forcePlaceholder={false}
                                highestResolutionLoaded={[Function]}
                                itemProp="image"
                                onError={[Function]}
                                onLoad={null}
                                ratio={null}
                                resolutions={
                                  Array [
                                    Object {
                                      "blur": 2,
                                      "height": 50,
                                      "width": 50,
                                    },
                                    Object {
                                      "height": 440,
                                      "width": 440,
                                    },
                                  ]
                                }
                                src="https://example.com/2"
                                srcmap={null}
                                transition={null}
                              >
                                <div
                                  className="css-326p2s "
                                />
                              </Image>
                            </ProductImage>
                            <div
                              className="css-1rbh2c4"
                            >
                              <div
                                className="css-by38mh"
                                itemProp="name"
                              >
                                <Ellipsis
                                  className=""
                                  ellipsis="..."
                                  rows={2}
                                >
                                  <Dotdotdot
                                    clamp={2}
                                    className=""
                                    ellipsis="..."
                                    tagName="div"
                                    truncationChar="…"
                                    useNativeClamp={true}
                                  >
                                    <div
                                      className=""
                                    >
                                      2
                                    </div>
                                  </Dotdotdot>
                                </Ellipsis>
                              </div>
                            </div>
                          </div>
                        </Link>
                      </Connect(Link)>
                    </ProductCard>
                  </div>
                </Card>
              </div>
            </Item>
          </div>
        </_class>
      </div>
    </ProductSlider>
  </Connect(ProductSlider)>
</Provider>
`;

exports[`ProductSlider should render slider with a show more button 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductSlider)
    isCartPage={true}
    products={
      Array [
        Object {
          "featuredImageUrl": "https://example.com/1",
          "id": "1",
          "name": "1",
        },
        Object {
          "featuredImageUrl": "https://example.com/2",
          "id": "2",
          "name": "2",
        },
      ]
    }
    showMore={true}
  >
    <ProductSlider
      dispatch={[Function]}
      isCartPage={true}
      isProductPage={false}
      products={
        Array [
          Object {
            "featuredImageUrl": "https://example.com/1",
            "id": "1",
            "name": "1",
          },
          Object {
            "featuredImageUrl": "https://example.com/2",
            "id": "2",
            "name": "2",
          },
        ]
      }
      showMore={true}
      showMoreUrl="/page/recently-viewed"
    >
      <div
        className="css-1my1qng"
      >
        <div
          className={
            Object {
              "data-css-1clsrg5": "",
            }
          }
        >
          <h3
            className="css-14l6086"
          >
            <Translate
              className=""
              params={Object {}}
              string="recently_viewed_products.headline_cart"
            >
              <span
                className=""
              >
                recently_viewed_products.headline_cart
              </span>
            </Translate>
          </h3>
          <div
            className={
              Object {
                "data-css-1kxjgrr": "",
              }
            }
          >
            <Connect(ButtonLink)
              href="/page/recently-viewed"
              noGap={true}
            >
              <ButtonLink
                href="/page/recently-viewed"
                navigate={[Function]}
                noGap={true}
              >
                <ActionButton
                  className=""
                  disabled={false}
                  flat={true}
                  loading={false}
                  noGap={true}
                  onClick={[Function]}
                  rippleClassName=""
                  rippleSize={null}
                  testId={null}
                  type="secondary"
                  wrapContent={true}
                >
                  <div
                    className="css-1yv2jt6"
                    data-test-id={null}
                  >
                    <RippleButton
                      className=""
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                      rippleClassName=""
                      rippleSize={null}
                      testId="Button"
                      type="secondary"
                      wrapContent={true}
                    >
                      <Button
                        className=""
                        disabled={false}
                        flat={true}
                        onClick={[Function]}
                        testId="Button"
                        type="secondary"
                        wrapContent={false}
                      >
                        <Button
                          className="css-dh0pju "
                          disabled={false}
                          onClick={[Function]}
                          testId="Button"
                        >
                          <button
                            className="css-dh0pju  css-1rn65c0"
                            data-test-id="Button"
                            disabled={false}
                            onClick={[Function]}
                          >
                            <Ripple
                              className="css-1fscwua "
                              color="#000"
                              disabled={false}
                              fill={true}
                              onClick={[Function]}
                              onComplete={[Function]}
                              overflow={false}
                              size={null}
                            >
                              <div
                                aria-hidden={true}
                                className="css-1fscwua "
                                data-test-id="Ripple"
                                onClick={[Function]}
                                style={null}
                              >
                                <Translate
                                  className=""
                                  params={Object {}}
                                  string="recently_viewed_products.show_more"
                                >
                                  <span
                                    className=""
                                  >
                                    recently_viewed_products.show_more
                                  </span>
                                </Translate>
                              </div>
                            </Ripple>
                          </button>
                        </Button>
                      </Button>
                    </RippleButton>
                  </div>
                </ActionButton>
              </ButtonLink>
            </Connect(ButtonLink)>
          </div>
        </div>
        <_class
          classNames={
            Object {
              "container": "css-1xfu8wy",
            }
          }
          controls={false}
          indicators={false}
          loop={false}
          slidesPerView={2.3}
          snapItems={false}
        >
          <div>
            <Item
              className="css-j85wo1"
              key="s1"
            >
              <div>
                <Card
                  className="css-6r0d5j"
                >
                  <div
                    className="css-1czp7w7 css-6r0d5j"
                  >
                    <ProductCard
                      hideName={false}
                      hidePrice={true}
                      hideRating={true}
                      product={
                        Object {
                          "featuredImageUrl": "https://example.com/1",
                          "id": "1",
                          "name": "1",
                        }
                      }
                      titleRows={2}
                    >
                      <Connect(Link)
                        className="css-b4pchx"
                        href="/item/31"
                        itemProp="item"
                        itemScope={true}
                        itemType="http://schema.org/Product"
                        tagName="a"
                      >
                        <Link
                          className="css-b4pchx"
                          disabled={false}
                          historyPush={[Function]}
                          historyReplace={[Function]}
                          href="/item/31"
                          itemProp="item"
                          itemScope={true}
                          itemType="http://schema.org/Product"
                          replace={false}
                          state={Object {}}
                          tag="div"
                          tagName="a"
                        >
                          <div
                            className="css-c6ki83 css-b4pchx"
                            data-test-id="link: /item/31"
                            onClick={[Function]}
                            role="link"
                          >
                            <ProductImage
                              alt="1"
                              animating={true}
                              forcePlaceholder={false}
                              highestResolutionLoaded={[Function]}
                              itemProp="image"
                              ratio={null}
                              resolutions={
                                Array [
                                  Object {
                                    "blur": 2,
                                    "height": 50,
                                    "width": 50,
                                  },
                                  Object {
                                    "height": 440,
                                    "width": 440,
                                  },
                                ]
                              }
                              src="https://example.com/1"
                            >
                              <Image
                                alt="1"
                                animating={true}
                                backgroundColor="#f2f2f2"
                                className=""
                                forcePlaceholder={false}
                                highestResolutionLoaded={[Function]}
                                itemProp="image"
                                onError={[Function]}
                                onLoad={null}
                                ratio={null}
                                resolutions={
                                  Array [
                                    Object {
                                      "blur": 2,
                                      "height": 50,
                                      "width": 50,
                                    },
                                    Object {
                                      "height": 440,
                                      "width": 440,
                                    },
                                  ]
                                }
                                src="https://example.com/1"
                                srcmap={null}
                                transition={null}
                              >
                                <div
                                  className="css-326p2s "
                                />
                              </Image>
                            </ProductImage>
                            <div
                              className="css-1rbh2c4"
                            >
                              <div
                                className="css-by38mh"
                                itemProp="name"
                              >
                                <Ellipsis
                                  className=""
                                  ellipsis="..."
                                  rows={2}
                                >
                                  <Dotdotdot
                                    clamp={2}
                                    className=""
                                    ellipsis="..."
                                    tagName="div"
                                    truncationChar="…"
                                    useNativeClamp={true}
                                  >
                                    <div
                                      className=""
                                    >
                                      1
                                    </div>
                                  </Dotdotdot>
                                </Ellipsis>
                              </div>
                            </div>
                          </div>
                        </Link>
                      </Connect(Link)>
                    </ProductCard>
                  </div>
                </Card>
              </div>
            </Item>
            <Item
              className="css-j85wo1"
              key="s2"
            >
              <div>
                <Card
                  className="css-6r0d5j"
                >
                  <div
                    className="css-1czp7w7 css-6r0d5j"
                  >
                    <ProductCard
                      hideName={false}
                      hidePrice={true}
                      hideRating={true}
                      product={
                        Object {
                          "featuredImageUrl": "https://example.com/2",
                          "id": "2",
                          "name": "2",
                        }
                      }
                      titleRows={2}
                    >
                      <Connect(Link)
                        className="css-b4pchx"
                        href="/item/32"
                        itemProp="item"
                        itemScope={true}
                        itemType="http://schema.org/Product"
                        tagName="a"
                      >
                        <Link
                          className="css-b4pchx"
                          disabled={false}
                          historyPush={[Function]}
                          historyReplace={[Function]}
                          href="/item/32"
                          itemProp="item"
                          itemScope={true}
                          itemType="http://schema.org/Product"
                          replace={false}
                          state={Object {}}
                          tag="div"
                          tagName="a"
                        >
                          <div
                            className="css-c6ki83 css-b4pchx"
                            data-test-id="link: /item/32"
                            onClick={[Function]}
                            role="link"
                          >
                            <ProductImage
                              alt="2"
                              animating={true}
                              forcePlaceholder={false}
                              highestResolutionLoaded={[Function]}
                              itemProp="image"
                              ratio={null}
                              resolutions={
                                Array [
                                  Object {
                                    "blur": 2,
                                    "height": 50,
                                    "width": 50,
                                  },
                                  Object {
                                    "height": 440,
                                    "width": 440,
                                  },
                                ]
                              }
                              src="https://example.com/2"
                            >
                              <Image
                                alt="2"
                                animating={true}
                                backgroundColor="#f2f2f2"
                                className=""
                                forcePlaceholder={false}
                                highestResolutionLoaded={[Function]}
                                itemProp="image"
                                onError={[Function]}
                                onLoad={null}
                                ratio={null}
                                resolutions={
                                  Array [
                                    Object {
                                      "blur": 2,
                                      "height": 50,
                                      "width": 50,
                                    },
                                    Object {
                                      "height": 440,
                                      "width": 440,
                                    },
                                  ]
                                }
                                src="https://example.com/2"
                                srcmap={null}
                                transition={null}
                              >
                                <div
                                  className="css-326p2s "
                                />
                              </Image>
                            </ProductImage>
                            <div
                              className="css-1rbh2c4"
                            >
                              <div
                                className="css-by38mh"
                                itemProp="name"
                              >
                                <Ellipsis
                                  className=""
                                  ellipsis="..."
                                  rows={2}
                                >
                                  <Dotdotdot
                                    clamp={2}
                                    className=""
                                    ellipsis="..."
                                    tagName="div"
                                    truncationChar="…"
                                    useNativeClamp={true}
                                  >
                                    <div
                                      className=""
                                    >
                                      2
                                    </div>
                                  </Dotdotdot>
                                </Ellipsis>
                              </div>
                            </div>
                          </div>
                        </Link>
                      </Connect(Link)>
                    </ProductCard>
                  </div>
                </Card>
              </div>
            </Item>
          </div>
        </_class>
      </div>
    </ProductSlider>
  </Connect(ProductSlider)>
</Provider>
`;
